--- a/index.html
+++ b/index.html
@@ -1585,7 +1585,7 @@
                 <div class="hero-image">
                     <div class="avatar-container">
                         <div class="avatar">
-                            <img src="/assets/%E4%B8%AA%E7%AB%99%E7%85%A7%E7%89%87-Bz8lZcLt.jpg" alt="陈鑫头像">
+                            <img src="./assets/%E4%B8%AA%E7%AB%99%E7%85%A7%E7%89%87-Bz8lZcLt.jpg" alt="陈鑫头像">
                         </div>
                     </div>
                 </div>
