--- a/index.html
+++ b/index.html
@@ -1585,7 +1585,7 @@
                 <div class="hero-image">
                     <div class="avatar-container">
                         <div class="avatar">
-                            <img src="./assets/Bz8lZcLt.jpg" alt="陈鑫头像">
+                            <img src="./assets/Bz8lZcLt.jpg" alt="logo">
                         </div>
                     </div>
                 </div>
